@@ -41,8 +41,8 @@ telegram=|2F446850313233347462A2|069F255900B029310000000306060906030609070606050
 # Test MKRadio4 T1 telegrams
 
 telegram=|2F446850200141029562A2|06702901006017030004000300000000000000000000000000000000000000000000000000|
-{"media":"warm water","meter":"mkradio4","name":"Duschen","id":"02410120","total_m3":0.4,"target_m3":0.1,"timestamp":"1111-11-11T11:11:11Z"}
-|Duschen;02410120;0.400000;0.100000;1111-11-11 11:11.11
+{"media":"warm water","meter":"mkradio4","name":"Duschagain","id":"02410120","total_m3":0.4,"target_m3":0.1,"timestamp":"1111-11-11T11:11:11Z"}
+|Duschagain;02410120;0.400000;0.100000;1111-11-11 11:11.11
 
 # Test vario451 T1 telegrams
 telegram=|374468506549235827C3A2|129F25383300A8622600008200800A2AF862115175552877A36F26C9AB1CB24400000004000000000004908002|
@@ -51,7 +51,7 @@ telegram=|374468506549235827C3A2|129F25383300A8622600008200800A2AF86211517555287
 
 # Test FHKV data II/III
 telegram=|31446850226677116980A0119F27020480048300C408F709143C003D341A2B0B2A0707000000000000062D114457563D71A1850000|
-{"media":"Heat Cost Allocator","meter":"fhkvdataiii","name":"Room","id":"11776622","current_hca":131,"current_date":"2020-02-08T02:00:00Z","previous_hca":1026,"previous_date":"2019-12-31T02:00:00Z","temp_room_c":22.44,"temp_radiator_c":25.51,"timestamp":"1111-11-11T11:11:11Z"}
+{"media":"heat cost allocator","meter":"fhkvdataiii","name":"Room","id":"11776622","current_hca":131,"current_date":"2020-02-08T02:00:00Z","previous_hca":1026,"previous_date":"2019-12-31T02:00:00Z","temp_room_c":22.44,"temp_radiator_c":25.51,"timestamp":"1111-11-11T11:11:11Z"}
 |Room;11776622;131.000000;2020-02-08T02:00:00Z;1026.000000;2019-12-31T02:00:00Z;22.440000;25.510000;1111-11-11 11:11.11
 
 # Test EurisII T1 telegrams
