@@ -1,4 +1,7 @@
 
+Cinemarene added support for the Techem MK Radio 4 water meter.
+Thanks Cinemarene!
+
 Mira added support for Elster V200H water meter and the Elster Merlin 868 addon.
 Thanks Mira!
 
